logs/sadi.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/WebOb-1.7.4.dist-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/frir'...
Compiling './lib/python3.5/site-packages/frir/frir.py'...
***   File "./lib/python3.5/site-packages/frir/frir.py", line 94
    print t
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/isodate'...
Listing './lib/python3.5/site-packages/isodate/tests'...
Listing './lib/python3.5/site-packages/isodate-0.6.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyparsing-2.2.0.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/pytidylib-0.3.2.egg-info'...
Listing './lib/python3.5/site-packages/rdflib'...
Listing './lib/python3.5/site-packages/rdflib/extras'...
Listing './lib/python3.5/site-packages/rdflib/plugins'...
Listing './lib/python3.5/site-packages/rdflib/plugins/parsers'...
Listing './lib/python3.5/site-packages/rdflib/plugins/parsers/pyMicrodata'...
Listing './lib/python3.5/site-packages/rdflib/plugins/parsers/pyRdfa'...
Listing './lib/python3.5/site-packages/rdflib/plugins/parsers/pyRdfa/extras'...
Listing './lib/python3.5/site-packages/rdflib/plugins/parsers/pyRdfa/host'...
Listing './lib/python3.5/site-packages/rdflib/plugins/parsers/pyRdfa/rdfs'...
Listing './lib/python3.5/site-packages/rdflib/plugins/parsers/pyRdfa/transform'...
Listing './lib/python3.5/site-packages/rdflib/plugins/serializers'...
Listing './lib/python3.5/site-packages/rdflib/plugins/sparql'...
Listing './lib/python3.5/site-packages/rdflib/plugins/sparql/results'...
Listing './lib/python3.5/site-packages/rdflib/plugins/stores'...
Listing './lib/python3.5/site-packages/rdflib/tools'...
Listing './lib/python3.5/site-packages/rdflib-4.2.2.dist-info'...
Listing './lib/python3.5/site-packages/sadi'...
Compiling './lib/python3.5/site-packages/sadi/sadi.py'...
***   File "./lib/python3.5/site-packages/sadi/sadi.py", line 341
    print "Serving HTTP on port",port,"..."
                               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/sadi-0.5.6.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/tidylib'...
Listing './lib/python3.5/site-packages/webob'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './share'...
Listing './share/python-wheels'...
